test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-owned.good
init-field-dflt-nonnil-owned-from-oknil-owned.chpl:8: error: Cannot initialize lhs of non-nilable type 'owned MyClass' from a nilable 'owned MyClass?'
